--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Sportlines</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div id="logo-container">
+            <img id="logo" src="imagens/Sportlines-lateral.png" alt="Sportlines">
+        </div>
+        <nav class="navbar">
+            <ul class="menu">
+                <li>HOME</li>
+                <li>SOBRE NÓS</li>
+                <li>MARCADOR DE CAMPO</li>
+                <li>ORÇAMENTO</li>
+                <li>CONTATE-NOS</li>
+            </ul>
+        </nav>
+    </header>
+   
     
 </body>
 </html>
