starting carousel marcador de campo

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <div id="logo-container">
-            <img id="logo" src="imagens/Sportlines-lateral.png" alt="Sportlines">
+        <div id="logo-lateral-container">
+            <img id="logo-lateral" src="imagens/Sportlines-lateral.png" alt="Sportlines">
         </div>
         <nav class="navbar">
             <ul class="menu">
@@ -22,7 +22,48 @@
             </ul>
         </nav>
     </header>
-   
-    
+    <div id="home">
+        <div id="conteudo-home">
+        <p>O melhor marcador de campo elétrico disponível no mercado, com o melhor preço.</p>
+        <h1>Clique aqui e faça seu orçamento!</h1>
+        <div class="botao"><h2>ORÇAMENTO</h2></div>
+        </div>
+        <div id="foto-home">
+            <img id="foto-01" src="imagens/gramado.jpg" alt="gramado">
+        </div>
+    </div>
+
+
+    <div class="header-section">
+        <h1>SOBRE NÓS</h1>
+    </div>
+    <div id="sobre">
+        <div id="texto-sobre">
+            <p>Bem-vindo à Sportilnes! Somos uma empresa nova no mercado de materiais esportivos, focada em soluções inovadoras para melhorar a experiência no futebol. Nossa missão é oferecer produtos de alta qualidade para clubes, escolas e apaixonados pelo esporte, promovendo seu crescimento. </p>
+            <p>Estamos comprometidos com o melhor atendimento e suporte, acreditando que a confiança se constrói com qualidade e transparência. Na Sportilnes, buscamos constantemente inovação e excelência. Escolha Sportilnes e descubra a diferença que nossos produtos podem fazer no seu jogo!</p>
+        </div>
+
+        <div id="logo-principal-container">
+            <img id="logo-principal" src="imagens/SportlinesLOGO-01.png" alt="Sportlines">
+        </div>
+    </div>
+    <div class="header-section">
+        <h1>MARCADOR DE CAMPO</h1>
+    </div>
+    <div id="section-marcador">
+        <div id="marcador">
+
+        </div>
+    </div>
+    <div class="header-section">
+        <h1>ORÇAMENTO</h1>
+    </div>
+    <div id="orcamento">
+
+    </div>
+    <div id="contato">
+        <h1>CONTATE-NOS</h1>
+    </div>
+
 </body>
 </html>
