--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Sportlines</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <link rel="stylesheet" href="style-celular.css">
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 </head>
 <body>
     <header>
         <div id="logo-lateral-container">
             <img id="logo-lateral" src="imagens/Sportlines-lateral.png" alt="Sportlines">
         </div>
-        <nav class="navbar">
+        <div id="menu-icone" onclick="toggleMenu()">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+            </svg>
+        </div>
+        <nav class="navbar" id="navbar">
             <ul class="menu">
                 <li><a href="#home">HOME</a></li>
                 <li><a href="#sobre-nos">SOBRE NÓS</a></li>
@@ -22,7 +28,15 @@
                 <li><a href="#contato">CONTATE-NOS</a></li>
             </ul>
         </nav>
+        
     </header>
+
+    <div id="spam-whatsapp">
+        <a href="https://w.app/xCZUaf" target="_blank"><svg xmlns="http://www.w3.org/2000/svg"  class="bi bi-whatsapp" viewBox="0 0 16 16">
+            <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
+        </svg></a>
+    </div>
+
     <div id="home">
         <div id="conteudo-home">
         <p>O melhor marcador de campo elétrico disponível no mercado, com o melhor preço.</p>
@@ -39,13 +53,12 @@
         <h1>SOBRE NÓS</h1>
     </div>
     <div id="sobre">
+        <div id="logo-principal-container">
+            <img id="logo-principal" src="imagens/SportlinesLOGO-01.png" alt="Sportlines">
+        </div>
         <div id="texto-sobre">
             <p>Bem-vindo à Sportilnes! Somos uma empresa nova no mercado de materiais esportivos, focada em soluções inovadoras para melhorar a experiência no futebol. Nossa missão é oferecer produtos de alta qualidade para clubes, escolas e apaixonados pelo esporte, promovendo seu crescimento. </p>
             <p>Estamos comprometidos com o melhor atendimento e suporte, acreditando que a confiança se constrói com qualidade e transparência. Na Sportilnes, buscamos constantemente inovação e excelência. Escolha Sportilnes e descubra a diferença que nossos produtos podem fazer no seu jogo!</p>
-        </div>
-
-        <div id="logo-principal-container">
-            <img id="logo-principal" src="imagens/SportlinesLOGO-01.png" alt="Sportlines">
         </div>
     </div>
     <div id="section-marcador">
@@ -146,16 +159,31 @@
             </div>
             <div class="form-group" id="msg-group">
                 <label class="label" for="mensagem">Mensagem: </label>
-                <input class="input" type="text" id="mensagem" name="mensagem" placeholder="Digite aqui a quantidade desejada e alguma observação ou pergunta que queira fazer" required>
+                <input class="input" type="text" id="mensagem" name="mensagem" placeholder="Digite aqui a quantidade desejada e alguma observação<br> ou pergunta que queira fazer" required>
             </div>
-            <div type="submit" class="botao" id="form-button"><h2>ENVIAR</h2></div>
+            <button type="submit" class="botao" id="form-button"><h2>ENVIAR</h2></button>
         </form>
     </div>
     <div id="contato">
         <h1>CONTATE-NOS</h1>
+        <div id="contato-grid">
+            <div id="contato-icones">
+                <a href="https://w.app/xCZUaf" target="_blank"><svg xmlns="http://www.w3.org/2000/svg"  class="bi bi-whatsapp" viewBox="0 0 16 16">
+                    <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
+                </svg></a>
+                <a href="mailto:sportlines.sp@gmail.com"><svg xmlns="http://www.w3.org/2000/svg"  class="bi bi-envelope" viewBox="0 0 16 16">
+                    <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
+                </svg></a>
+            </div>
+            <div id="contato-escrita">
+                <a href="https://w.app/xCZUaf" target="_blank"><p>11 98806-7964</p></a>
+                <a href="mailto:sportlines.sp@gmail.com"><p>sportlines.sp@gmail.com</p></a>
+            </div>
+        </div>
     </div>
 
 </body>
 <script src="function-fotos.js"></script>
 <script src="emailJS.js"></script>
+<script src="toggleMenu.js"></script>
 </html>
